--- a/index.html
+++ b/index.html
@@ -1,3 +1,28 @@
+<!-- <?php  
+    require_once 'inc/log_bdd.php';
+
+    if (!empty($_POST)) {
+    // var_dump($_POST);
+    $_POST['objet'] = htmlspecialchars($_POST['objet']);
+    $_POST['mail'] = htmlspecialchars($_POST['mail']);
+    $_POST['message'] = htmlspecialchars($_POST['message']);
+
+    $insertion = $pdoLOG->prepare(" INSERT INTO contact (objet, mail, message) VALUES (:objet, :mail, :message) ");
+
+    $insertion->execute(array(
+    ':objet' => $_POST['objet'],
+    ':mail' => $_POST['mail'],
+    ':message' => $_POST['message'],
+    ));
+
+    if ($insertion) {
+        $contenu .='<div class="alert alert-success">Votre Message a bien été envoyé, nous vous répondrons sous 48 heures</div>  ';
+    } else {
+        $contenu .='<div class="alert alert-danger">Erreur lors de l\'envoi du message !</div>';
+    }
+    }
+?> -->
+<!-- Myriam ne cala pas le code au dessus ni le dossier inc -->
 <!DOCTYPE html>
 <html lang="fr">
 	<head>
@@ -45,7 +70,7 @@
                 <a class="nav-link text-white" href="index.html#contact">Contact</a>
               </li>
             </ul>
-            <a  class="btn btn-dark" href="https://www.focus-entmt.com/fr/games/a-plague-tale-innocence" target="_blank" class="navbar-text" style="text-decoration: none;">
+            <a  class="btn btn-dark" href="https://www.focus-entmt.com/fr/games/a-plague-tale-innocence" target="_blank" class="navbar-text" role="button">
               Focus Entertainement
 			</a>
           </div>
