html pour github page

--- a/index.html
+++ b/index.html
@@ -45,17 +45,17 @@
         <div class="collapse navbar-collapse" id="navbarText">
           <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link text-white" href="index.php#synopsis">Synopsis</a>
+              <a class="nav-link text-white" href="index.html#synopsis">Synopsis</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link text-white" href="index.php#personnages">Personnages</a>
+              <a class="nav-link text-white" href="index.html#personnages">Personnages</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link text-white" href="index.php#gameplay">Gameplay</a>
+              <a class="nav-link text-white" href="index.html#gameplay">Gameplay</a>
             </li>
           </ul>
           <button type="button" class="btn btn-dark btn-contact" data-bs-toggle="modal" data-bs-target="#staticBackdrop">Contact</button>
-          <a class="btn btn-warning" href="index.php#boutique" class="navbar-text" role="button">Achetez le Jeu</a>
+          <a class="btn btn-warning" href="index.html#boutique" class="navbar-text" role="button">Achetez le Jeu</a>
         </div>
       </div>
     </nav>
